# PECS

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: ecs.c.D7DF723EB112C334.idx  ecs.h.52F6DE16F051909E.idx  entity.c.1F8D12B6A308BB53.idx  entity.c.D513A2E546245A82.idx  entity.h.3E710D2E76F2CF5D.idx  entity.h.F2EC01D9756CB315.idx  main.c.49A7A7DBD820D43E.idx  main.c.72820ABA375B6B5B.idx  query.c.12CE0BFEE6CE3865.idx  query.c.C36F5D3B02EE2CE6.idx  query.h.7DC9494C1C42C2CB.idx  query.h.E841218724D64DAB.idx  resource.h.ECE7A7226F3982E8.idx  systems.h.4DDD432867D13CF3.idx  systems.h.F8F69D8403E06B4B.idx  world.c.0CC26FCBBAEE907B.idx  world.c.89694D050E883496.idx  world.h.34E6148C6388CE48.idx  world.h.E88D4F703365BB80.idx
examples/sdl/: .clangd  CMakeLists.txt  app.c  app.h  character.c  character.h  draw.c  draw.h  main.c  time.c  time.h
examples/sdl/utils/math/: vec2.c  vec2.h
include/: entity.h  query.h  resource.h  systems.h  world.h
src/: entity.c  main.c  query.c  systems.c  world.c
src/ecs/: ecs.h  entity.h  query.c  query.h  resource.h  systems.c  systems.h  world.c  world.h
